# fast_rsync

./: .travis.yml  Cargo.toml  README.md  rust-toolchain
.github/workflows/: rust.yml
benches/: rsync_bench.rs
fuzz/: Cargo.toml
src/: consts.rs  crc.rs  diff.rs  hasher.rs  hashmap_variant.rs  lib.rs  patch.rs  signature.rs  tests.rs
src/md4/: aarch64_simd_transpose.rs  mod.rs  x86_simd_transpose.rs
