[package]
name = "fast_rsync"
version = "0.1.0"
authors = ["Dropbox Engineering", "bacher09, Artyom Pavlov (RustCrypto/hashes/MD4)"]
license = "Apache-2.0"
description = "An optimized implementation of librsync in pure Rust."
repository = "https://github.com/dropbox/fast_rsync"
keywords = ["rsync"]
edition = "2018"

[dependencies]
arrayref = "0.3.6"
packed_simd = "0.3.3"

[dev-dependencies]
librsync = { git = "https://github.com/goffrie/librsync-rs", rev = "ab9c427b5b20624fe533ad0247fe0f9c3460245e", default-features = false }
quickcheck = { version = "0.9.2", default-features = false }
quickcheck_macros = "0.9.1"
rand = "0.7.3"
criterion = "0.3.1"
no-panic = "0.1.12"

[[bench]]
name = "rsync_bench"
harness = false

[profile.test]
lto = true
