[package]
name = "fast_rsync"
version = "0.1.3"
authors = ["Dropbox Engineering", "bacher09, Artyom Pavlov (RustCrypto/hashes/MD4)"]
license = "Apache-2.0"
description = "An optimized implementation of librsync in pure Rust."
readme = "README.md"
repository = "https://github.com/dropbox/fast_rsync"
keywords = ["rsync"]
edition = "2018"

exclude = [
    ".github",
    ".gitignore",
    "rust-toolchain",
]

[dependencies]
arrayref = "0.3.6"
packed_simd = { version = "0.3.4", package = "packed_simd_2" }

[dev-dependencies]
librsync = { git = "https://github.com/goffrie/librsync-rs", rev = "56e7646d133c3174656b66c61f6259d6154a8873", default-features = false }
quickcheck = { version = "0.9.2", default-features = false }
quickcheck_macros = "0.9.1"
rand = "0.7.3"
criterion = "0.3.1"

[[bench]]
name = "rsync_bench"
harness = false
