[package]
name = "fast_rsync"
version = "0.1.4"
authors = ["Dropbox Engineering", "bacher09, Artyom Pavlov (RustCrypto/hashes/MD4)"]
license = "Apache-2.0"
description = "An optimized implementation of librsync in pure Rust."
readme = "README.md"
repository = "https://github.com/dropbox/fast_rsync"
keywords = ["rsync"]
edition = "2018"

exclude = [
    ".github",
    ".gitignore",
    "rust-toolchain",
]

[dependencies]
arrayref = "0.3.6"

[dev-dependencies]
librsync = { git = "https://github.com/goffrie/librsync-rs", rev = "e2e4b06022d889e020c439f2dc92ea2fec0e483e", default-features = false }
quickcheck = { version = "1.0", default-features = false }
quickcheck_macros = "1.0"
rand = "0.8"
criterion = "0.3.1"

[[bench]]
name = "rsync_bench"
harness = false
