[package]
name = "rsync-fuzz"
version = "0.1.0"
authors = ["Dropbox Engineering"]
edition = "2018"
publish = false

[dependencies]
fast_rsync = { path = ".." }
honggfuzz = "0.5.45"
librsync = { git = "https://github.com/goffrie/librsync-rs", rev = "ab9c427b5b20624fe533ad0247fe0f9c3460245e", default-features = false }
rand = { version = "0.7.3", features = ["small_rng"] }
