[package]
name = "rsync-fuzz"
version = "0.1.0"
authors = ["Dropbox Engineering"]
edition = "2018"
publish = false

[dependencies]
fast_rsync = { path = ".." }
honggfuzz = "0.5.54"
librsync = { git = "https://github.com/goffrie/librsync-rs", rev = "e2e4b06022d889e020c439f2dc92ea2fec0e483e", default-features = false }
rand = { version = "0.8", features = ["small_rng"] }
